// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsCarousel should render normal accounts 1`] = `
<div>
  <a
    aria-label="My Sporran Account"
    href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
    title="My Sporran Account"
  >
    ←
  </a>
  <section>
    <h2
      style="display: inline;"
    >
      My Second Account
    </h2>
    <nav
      class="container"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Account options"
        class="button"
        role="button"
        tabindex="0"
        title="Account options"
        type="button"
      >
        v
      </button>
    </nav>
  </section>
  <a
    aria-label="My Third Account"
    href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
    title="My Third Account"
  >
    →
  </a>
</div>
`;

exports[`AccountsCarousel should render the first account 1`] = `
<div>
  <a
    aria-label="Create new account"
    href="/account/NEW"
    title="Create new account"
  >
    ←
  </a>
  <section>
    <h2
      style="display: inline;"
    >
      My Sporran Account
    </h2>
    <nav
      class="container"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Account options"
        class="button"
        role="button"
        tabindex="0"
        title="Account options"
        type="button"
      >
        v
      </button>
    </nav>
  </section>
  <a
    aria-label="My Second Account"
    href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
    title="My Second Account"
  >
    →
  </a>
</div>
`;

exports[`AccountsCarousel should render the last account 1`] = `
<div>
  <a
    aria-label="My Second Account"
    href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
    title="My Second Account"
  >
    ←
  </a>
  <section>
    <h2
      style="display: inline;"
    >
      My Third Account
    </h2>
    <nav
      class="container"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Account options"
        class="button"
        role="button"
        tabindex="0"
        title="Account options"
        type="button"
      >
        v
      </button>
    </nav>
  </section>
  <a
    aria-label="My Fourth Account"
    href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtA"
    title="My Fourth Account"
  >
    →
  </a>
</div>
`;

exports[`AccountsCarousel should render the new account 1`] = `
<div>
  <a
    aria-label="My Fifth Account"
    href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtB"
    title="My Fifth Account"
  >
    ←
  </a>
  <section>
    <a
      href="/account/create"
    >
      <h2>
        Create new account
      </h2>
    </a>
    <p>
      or
    </p>
    <a
      href="/account/import"
    >
      Import an account from pre-existing phrase
    </a>
  </section>
  <a
    aria-label="My Sporran Account"
    href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
    title="My Sporran Account"
  >
    →
  </a>
</div>
`;

exports[`AccountsCarousel should support other paths 1`] = `
<div>
  <a
    aria-label="My Second Account"
    href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr/send"
    title="My Second Account"
  >
    ←
  </a>
  <section>
    <h2
      style="display: inline;"
    >
      My Third Account
    </h2>
    <nav
      class="container"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Account options"
        class="button"
        role="button"
        tabindex="0"
        title="Account options"
        type="button"
      >
        v
      </button>
    </nav>
  </section>
  <a
    aria-label="My Fourth Account"
    href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtA/send"
    title="My Fourth Account"
  >
    →
  </a>
</div>
`;
